use template for git config

--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -1,6 +1,6 @@
 [user]
-	email = ryan.najac@columbia.edu
-	name = Ryan D. Najac
+	email =  {{ .email }}
+	name = {{ .name }}
 	username = rdnajac
 
 [init]
