--- a/.chezmoiscripts/run_once_install-lazygit.sh.tmpl
+++ b/.chezmoiscripts/run_once_install-lazygit.sh.tmpl
@@ -1,6 +1,7 @@
 #!/bin/sh
+# FIXME:
 {{ if ne .chezmoi.os "darwin" }}
-LAZYGIT_VERSION=$(curl -s "https://api.github.com/repos/jesseduffield/lazygit/releases/latest" | grep -Po '"tag_name": *"v\\K[^"]*')
+LAZYGIT_VERSION=$(curl -s https://api.github.com/repos/jesseduffield/lazygit/releases/latest | grep '"tag_name"' | sed -E 's/.*"v([^"]+)".*/\1/')
 curl -Lo lazygit.tar.gz "https://github.com/jesseduffield/lazygit/releases/download/v${LAZYGIT_VERSION}/lazygit_${LAZYGIT_VERSION}_Linux_x86_64.tar.gz"
 tar xf lazygit.tar.gz lazygit
 install -Dm755 lazygit "{{ .chezmoi.homeDir }}/.local/bin/lazygit"
