--- a/.chezmoiscripts/run_once_install-rust.sh.tmpl
+++ b/.chezmoiscripts/run_once_install-rust.sh.tmpl
@@ -3,5 +3,9 @@
 if ! command -v cargo > /dev/null; then
   echo "Installing rustup..."
   curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
-  . "$HOME/.cargo/env"
+{{- if .data.codespaces }}
+export PATH="$HOME/.cargo/bin:$PATH"
+{{- else }}
+. "$HOME/.cargo/env"
+{{- end }}
 fi
