--- a/.chezmoiscripts/run_once_00-install-rust.sh.tmpl
+++ b/.chezmoiscripts/run_once_00-install-rust.sh.tmpl
@@ -3,7 +3,7 @@
 if ! command -v cargo > /dev/null; then
   echo "Installing rustup..."
   curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
-{{- if .data.codespaces }}
+{{- if .codespaces }}
 export PATH="$HOME/.cargo/bin:$PATH"
 {{- else }}
 . "$HOME/.cargo/env"
