--- a/.chezmoiscripts/run_onchange_install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_install-packages.sh.tmpl
@@ -9,6 +9,7 @@ sudo apt install -y \
 {{- end }}
 {{ end }}
 
+. "$HOME/.cargo/env"
 cargo install --locked \
 {{- range .packages.cargo.crates }}
   {{ . }} \
