--- a/.chezmoiscripts/run_once_before-install-rust.sh.tmpl
+++ b/.chezmoiscripts/run_once_before-install-rust.sh.tmpl
@@ -1,11 +1,8 @@
+{{- if and (not .ephemeral) (not .headless) }}
 #!/bin/sh
 ## Install rust using rustup if it is not already installed.
 if ! command -v cargo > /dev/null; then
-  echo "Installing rustup..."
   curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
-{{- if .codespaces }}
-export PATH="$HOME/.cargo/bin:$PATH"
-{{- else }}
 . "$HOME/.cargo/env"
-{{- end }}
 fi
+{{- end }}
