configure authorized keys

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -64,6 +64,7 @@ name = {{ $name | quote }}
 osid = {{ $osID | quote }}
 personal = {{ $personal }}
 work = {{ $work }}
+githubUsername = "rdnajac"
 
 [git]
 autoAdd = true
