use apt-get in scripts

--- a/.chezmoiscripts/run_onchange_install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_install-packages.sh.tmpl
@@ -4,8 +4,8 @@
 {{ if or .headless .ephemeral }}
 export DEBIAN_FRONTEND=noninteractive
 {{ end }}
-sudo apt update
-sudo apt install -y \
+apt-get update -y
+apt-get install -y --no-install-recommends \
   {{- range .packages.apt.packages }}
     {{ . }} \
   {{- end }}
