--- a/.chezmoiexternal.toml.tmpl
+++ b/.chezmoiexternal.toml.tmpl
@@ -1,12 +1,7 @@
-[".config/vim/"]
+[".vim/"]
 type = "git-repo"
 url = "https://github.com/rdnajac/.vim.git"
-refreshPeriod = "24h"
-
-# [".config/vim/autoload/plug.vim"]
-#   type = "file"
-#   url = "https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim"
-#   refreshPeriod = "999h"
+refreshPeriod = "never"
 
 {{- if .work }}
 [".local/bin/nvim"]
