fix update/install script templates

--- a/.chezmoiexternal.toml.tmpl
+++ b/.chezmoiexternal.toml.tmpl
@@ -1,7 +1,7 @@
 [".vim/"]
 type = "git-repo"
 url = "https://github.com/rdnajac/.vim.git"
-refreshPeriod = "never"
+refreshPeriod = "0s"
 
 {{- if .work }}
 [".local/bin/nvim"]
