--- a/dot_config/ghostty/config.tmpl
+++ b/dot_config/ghostty/config.tmpl
@@ -1,18 +1,21 @@
-command = "$(command -v tmux)" new-session -A -s ghostty
-
+{{- if lookPath "tmux" }}
+command = {{ lookPath "tmux" }} tmux list-clients -t ghostty >/dev/null 2>&1 || {{ lookPath "tmux" }} new-session -A -s ghostty
+{{- end }}
 theme = tokyonight_night
 background = #16161d
 # background-opacity = .8
 # background-blur = true
 # window-decoration = false
+
+font-size = {{ .fontSize }}
+{{- if not .fontLigatures }}
 font-feature = -calt, -liga, -dlig
-# TODO: use chezmoi template for font configs
-font-size = 13
+{{- end }}
+
 # fullscreen = true
 # macos-non-native-fullscreen = true
 
- ustom-shader = ./shaders/ghostty-shader-playground/shaders/cursor_blaze_tapered.glsl
+custom-shader = ./shaders/cursor_blaze_tapered.glsl
 # custom-shader = ./shaders/ghostty-shader-playground/shaders/cursor_smear.glsl
 # custom-shader = ./shaders/ghostty-shader-playground/shaders/cursor_frozen.glsl
 # custom-shader = ./shaders/glitchy.glsl
-
