dont show external diff

--- a/.chezmoiexternal.toml.tmpl
+++ b/.chezmoiexternal.toml.tmpl
@@ -5,8 +5,10 @@ refreshPeriod = "0s"
 
 [".local/"]
 type = "archive"
-{{- $platform := ternary "macos" "linux" (eq .chezmoi.os "darwin") }}
-{{- $arch := ternary "arm64" "x86_64" (eq .chezmoi.arch "arm64") }}
+{{- $platform := "linux" -}}
+{{- if eq .chezmoi.os "darwin" -}}{{- $platform = "macos" -}}{{- end -}}
+{{- $arch := "x86_64" -}}
+{{- if eq .chezmoi.arch "arm64" -}}{{- $arch = "arm64" -}}{{- end -}}
 url = {{ printf "https://github.com/neovim/neovim/releases/download/nightly/nvim-%s-%s.tar.gz" $platform $arch | quote }}
 executable = true
 refreshPeriod = "24h"
