don't overwrite empty keys

--- a/dot_ssh/authorized_keys.tmpl
+++ b/dot_ssh/authorized_keys.tmpl
@@ -1,5 +1,5 @@
-{{- if .ephemeral -}}
+{{- if or .ephemeral .work -}}
 {{- range gitHubKeys .githubUsername -}}
 {{   .Key }}
-{{- end }}
-{{- end }}
+{{- end -}}
+{{- end -}}
