add TODOs and organize bin scripts

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -4,7 +4,6 @@
 {{- $headless := false -}}{{/* true if this machine does not have a screen and keyboard */}}
 {{- $personal := false -}}{{/* true if this machine should have personal secrets */}}
 {{- $work := false -}}{{/* true if this machine is a work machine */}}
-{{- $codespaces:= env "CODESPACES" | not | not -}}
 {{- "" -}}
 
 {{- $osID := .chezmoi.os -}}
@@ -51,6 +50,7 @@
 {{-   $email = "ryan.najac@columbia.edu" -}}
 {{- end -}}
 
+# TODO: change sourceDir on home machine
 sourceDir = {{ .chezmoi.sourceDir | quote }}
 destinationDir = {{ .chezmoi.destDir | quote }}
 progress = true
@@ -65,7 +65,6 @@ osid = {{ $osID | quote }}
 personal = {{ $personal }}
 work = {{ $work }}
 githubUsername = "rdnajac"
-codespaces = {{ $codespaces }}
 
 [git]
 autoAdd = true
