--- a/dot_ssh/authorized_keys.tmpl
+++ b/dot_ssh/authorized_keys.tmpl
@@ -1,5 +1,5 @@
 {{- if .work -}}
-{{- range gitHubKeys .githubUsername -}}
+{{ range gitHubKeys .githubUsername -}}
 {{   .Key }}
-{{- end -}}
+{{ end -}}
 {{- end -}}
