--- a/dot_config/ghostty/config.tmpl
+++ b/dot_config/ghostty/config.tmpl
@@ -1,8 +1,9 @@
 {{- if lookPath "tmux" -}}
-command = {{ lookPath "tmux" }} new-session -A -s ghostty
+# command = {{ lookPath "tmux" }} new-session -A -s ghostty
 # command = {{ lookPath "tmux" }} new-session -A -s ghostty "{{ .chezmoi.homeDir }}/bin/nv -c 'Snacks.terminal.open()'"
 # command = {{ lookPath "tmux" }} new-session -A -s ghostty "{{ .chezmoi.homeDir }}/.local/bin/nvim"
-{{- else -}}
+# initial-command = {{ lookPath "nvim" }}  --listen http://127.0.0.1:6969
+# {{- else -}}
 {{- end }}
 font-size = {{ .fontSize }}
 {{- if not .fontLigatures }}
