--- a/dot_config/ghostty/config.tmpl
+++ b/dot_config/ghostty/config.tmpl
@@ -13,11 +13,11 @@ font-feature = -calt, -liga, -dlig
 
 theme = tokyonight_night
 background = #16161d
-background-opacity = .8
+# background-opacity = .8
 # background-blur = true
-window-decoration = false
+# window-decoration = false
 # fullscreen = true
-macos-non-native-fullscreen = true
+# macos-non-native-fullscreen = true
 
 custom-shader = ~/.config/ghostty/shaders/cursor_blaze_tapered.glsl
 # custom-shader = ~/.config/ghostty/shaders/galaxy.glsl
