--- a/.chezmoiexternal.toml.tmpl
+++ b/.chezmoiexternal.toml.tmpl
@@ -3,7 +3,7 @@ type = "git-repo"
 url = "https://github.com/rdnajac/.vim.git"
 refreshPeriod = "0s"
 
-{{- if or .work .personal }}
+{{- if .work }}
 [".local/neovim"]
 type = "archive"
 exact = true
@@ -13,7 +13,7 @@ stripComponents = 1
 {{- $arch := "x86_64" -}}
 {{- if eq .chezmoi.arch "arm64" -}}{{- $arch = "arm64" -}}{{- end -}}
 url = {{ printf "https://github.com/neovim/neovim/releases/download/nightly/nvim-%s-%s.tar.gz" $platform $arch | quote }}
-executable = false 
+executable = false
 refreshPeriod = "24h"
 {{- end }}
 
