--- a/dot_config/ghostty/config.tmpl
+++ b/dot_config/ghostty/config.tmpl
@@ -2,23 +2,23 @@
 # command = {{ lookPath "tmux" }} new-session -A -s ghostty
 # command = {{ lookPath "tmux" }} new-session -A -s ghostty "{{ .chezmoi.homeDir }}/.local/bin/nvim"
 # initial-command = {{ lookPath "nvim" }}  --listen http://127.0.0.1:6969
-# {{- else -}}
+{{- else -}}
 {{- end -}}
 
 font-size = {{ .fontSize }}
 {{- if not .fontLigatures }}
-# TODO: some features linger (see: backticks `` `)
-font-feature = -calt, -liga, -dlig
+font-feature = -calt
+font-feature = -liga
+font-feature = -dlig
 {{- end }}
 
 theme = tokyonight_night
-background = #16161d
-# background-opacity = .8
+# background = #16161d
+background-opacity = .9
 # background-blur = true
 # window-decoration = false
 # fullscreen = true
 # macos-non-native-fullscreen = true
 
 custom-shader = ~/.config/ghostty/shaders/cursor_blaze_tapered.glsl
-# custom-shader = ~/.config/ghostty/shaders/galaxy.glsl
 cursor-style = block
