--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -42,10 +42,14 @@
 	process = git-lfs filter-process
 	required = true
 [alias]
+	a = add -v
+        ca = commit -a
+        cm = commit -m
+        cma = commit -ma
+        cam = commit -am
 	uncommit = reset HEAD~1
 	recommit = commit --amend --no-edit
 	undo = reset --soft HEAD^
-	editcommit = commit --amend
 	logg = log --color --oneline -a --graph
 	tree = log --graph --oneline --all --decorate
 	tags = tag -l
