--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -43,10 +43,12 @@
 	required = true
 [alias]
 	a = add -v
-        ca = commit -a
-        cm = commit -m
-        cma = commit -ma
-        cam = commit -am
+	ca = commit -a
+	cm = commit -m
+	cma = commit -ma
+	cam = commit -am
+	s = status
+	P = push
 	uncommit = reset HEAD~1
 	recommit = commit --amend --no-edit
 	undo = reset --soft HEAD^
