--- a/.chezmoiscripts/run_onchange_daily_brewup.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_daily_brewup.sh.tmpl
@@ -1,9 +1,6 @@
-#!/bin/sh
-## update and upgrade brew packages, then dump Brewfile
-## re-runs whenever this value changes: {{ now.YearDay }}
 {{ if lookPath "brew" -}}
-brew update
-brew upgrade
+#!/bin/sh
+## update/upgrade brew packages whenever this value changes: {{ now.YearDay }}
+brew update && brew upgrade && brew cleanup -s
 brew bundle dump --force --file="{{ .chezmoi.sourceDir }}/dot_config/brewfile/Brewfile"
-brew cleanup -s
 {{- end }}
