set path in zprofile

--- a/dot_zprofile.tmpl
+++ b/dot_zprofile.tmpl
@@ -1,1 +1,4 @@
 eval "$({{ lookPath "brew" }} shellenv)"
+export PATH="/Users/rdn/bin:$PATH"
+export PATH="/Users/rdn/.local/bin:$PATH"
+export PATH="/Users/rdn/.local/neovim/bin:$PATH"
